# oma-switch

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  install.sh  pyproject.toml  setup.py
.github/workflows/: test.yml
.omo/evidence/: baseline.md  task-0-baseline.txt
.omo/evidence/baseline/: cli_help_output.txt  cli_list_output.txt
.omo/evidence/coverage-baseline/: coverage.json  summary.txt
.omo/evidence/coverage-baseline/htmlcov/: class_index.html  function_index.html  index.html  status.json  z_6e17d53e8df15d8c___init___py.html  z_6e17d53e8df15d8c___main___py.html  z_6e17d53e8df15d8c_cli_helpers_py.html  z_6e17d53e8df15d8c_cli_py.html  z_6e17d53e8df15d8c_commands_py.html  z_6e17d53e8df15d8c_config_io_py.html  z_6e17d53e8df15d8c_constants_py.html  z_6e17d53e8df15d8c_dcp_py.html  z_6e17d53e8df15d8c_display_py.html  z_6e17d53e8df15d8c_fallback_cmds_py.html  z_6e17d53e8df15d8c_history_py.html  z_6e17d53e8df15d8c_io_utils_py.html  (+5 more)
src/oma_switch/: __init__.py  __main__.py  cli.py  cli_helpers.py  commands.py  config_io.py  constants.py  dcp.py  display.py  fallback_cmds.py  history.py  io_utils.py  models.py  prompt.py  template.py  types.py  version.py
tests/: conftest.py  test_atomic_write.py  test_cmd_fallback.py  test_config_fallback.py  test_core.py  test_fallback_display.py  test_fallback_generate.py  test_fallback_io.py  test_fallback_merge.py  test_fallback_prompt.py  test_fallback_schema.py  test_history.py  test_integration.py  test_prompt_search.py  test_restore.py  test_version_management.py
