[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["F405", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["oma_switch"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = false
disallow_untyped_defs = false
no_implicit_optional = false

[tool.coverage.run]
source = ["src/oma_switch"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
